; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_tbutils.c_acpi_tb_cleanup_table_header.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_tbutils.c_acpi_tb_cleanup_table_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_table_header = type { i32, i32, i32, i32 }

@ACPI_NAME_SIZE = common dso_local global i32 0, align 4
@ACPI_OEM_ID_SIZE = common dso_local global i32 0, align 4
@ACPI_OEM_TABLE_ID_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.acpi_table_header*, %struct.acpi_table_header*)* @acpi_tb_cleanup_table_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_tb_cleanup_table_header(%struct.acpi_table_header* %0, %struct.acpi_table_header* %1) #0 {
  %3 = alloca %struct.acpi_table_header*, align 8
  %4 = alloca %struct.acpi_table_header*, align 8
  store %struct.acpi_table_header* %0, %struct.acpi_table_header** %3, align 8
  store %struct.acpi_table_header* %1, %struct.acpi_table_header** %4, align 8
  %5 = load %struct.acpi_table_header*, %struct.acpi_table_header** %3, align 8
  %6 = load %struct.acpi_table_header*, %struct.acpi_table_header** %4, align 8
  %7 = call i32 @ACPI_MEMCPY(%struct.acpi_table_header* %5, %struct.acpi_table_header* %6, i32 16)
  %8 = load %struct.acpi_table_header*, %struct.acpi_table_header** %3, align 8
  %9 = getelementptr inbounds %struct.acpi_table_header, %struct.acpi_table_header* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @ACPI_NAME_SIZE, align 4
  %12 = call i32 @acpi_tb_fix_string(i32 %10, i32 %11)
  %13 = load %struct.acpi_table_header*, %struct.acpi_table_header** %3, align 8
  %14 = getelementptr inbounds %struct.acpi_table_header, %struct.acpi_table_header* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @ACPI_OEM_ID_SIZE, align 4
  %17 = call i32 @acpi_tb_fix_string(i32 %15, i32 %16)
  %18 = load %struct.acpi_table_header*, %struct.acpi_table_header** %3, align 8
  %19 = getelementptr inbounds %struct.acpi_table_header, %struct.acpi_table_header* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @ACPI_OEM_TABLE_ID_SIZE, align 4
  %22 = call i32 @acpi_tb_fix_string(i32 %20, i32 %21)
  %23 = load %struct.acpi_table_header*, %struct.acpi_table_header** %3, align 8
  %24 = getelementptr inbounds %struct.acpi_table_header, %struct.acpi_table_header* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @ACPI_NAME_SIZE, align 4
  %27 = call i32 @acpi_tb_fix_string(i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @ACPI_MEMCPY(%struct.acpi_table_header*, %struct.acpi_table_header*, i32) #1

declare dso_local i32 @acpi_tb_fix_string(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
